<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".StudentActivity">

    <EditText
        android:id="@+id/etNpm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/npm"
        android:layout_marginBottom="8dp"
        android:inputType="number"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginBottom="8dp"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etIpk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ipk"
        android:layout_marginBottom="8dp"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:layout_marginBottom="8dp"
        android:inputType="phone"
        android:autofillHints="" />

    <Button
        android:id="@+id/btSend1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_with_intent"
        />

    <Button
        android:id="@+id/btSend2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_with_intent_parcelable"
        />

    <Button
        android:id="@+id/btDial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call"
        />

</LinearLayout>