<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:autofillHints="number 1"
        android:inputType="numberDecimal"
        android:id="@+id/etNumber1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_number"
        android:layout_marginBottom="8dp"
        />
    <EditText
        android:autofillHints="number 1"
        android:inputType="numberDecimal"
        android:id="@+id/etNumber2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_number"
        android:layout_marginBottom="8dp"
        />
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center"
       android:layout_marginBottom="8dp"
       >
       <Button
           android:id="@+id/btAdd"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/add"
           android:textSize="24sp"
           android:layout_marginEnd="8dp"
           android:layout_weight="1"
           />
       <Button
           android:id="@+id/btSub"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/sub"
           android:textSize="24sp"
           android:layout_marginEnd="8dp"
           android:layout_weight="1"
           />
       <Button
           android:id="@+id/btMul"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/multiply"
           android:textSize="24sp"
           android:layout_marginEnd="8dp"
           android:layout_weight="1"
           />
       <Button
           android:id="@+id/btDiv"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/divison"
           android:textSize="24sp"
           android:layout_marginEnd="8dp"
           android:layout_weight="1"
           />
   </LinearLayout>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

</LinearLayout>